[package]
name = "en-2fa"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"
hex = "0.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# DB
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "macros"] }

# EVM / RPC
ethers = { version = "2", features = ["abigen", "rustls"] }
